--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -48,7 +48,7 @@ $marg: 10px;
 $chatClosed: 48px;
 $chatOpen: 220px;
 $pageWidth: 950px;
-$scrollbar: 8px;
+$scrollbar: 10px;
 $modalContentInner: 957px;
 $buttonHeight: 35px;
 
